--- a/Inscription/Concoursprog.html
+++ b/Inscription/Concoursprog.html
@@ -27,11 +27,11 @@
                             <input type="radio" name="Group" value="M1" id="M1"/> <label for="M1"> Master 1ère année </label> <br/>
                             <input type="radio" name="Group" value="M2" id="M2"/> <label for="M2"> Master 2ème année </label> <br/>
                             <div style="margin-top: -2.1em; padding: 0 5vmin 1em 5vmin">
- +                                <input type="radio" name="Group" value="autre" id="autreg"/> <label for="autreg"> Autre </label>
- +                                <div class="reveal-if-active">
- +                                    <input type="text" id="which-Group" name="which-Group" class="require-if-active" data-require-pair="#autreg" size="20vmin">
- +                                </div>
- +                          </div>
+                                <input type="radio" name="Group" value="autre" id="autreg"/> <label for="autreg"> Autre </label>
+                                <div class="reveal-if-active">
+                                    <input type="text" id="which-Group" name="which-Group" class="require-if-active" data-require-pair="#autreg" size="20vmin">
+                                </div>
+                            </div>
                         </p>
                     </div>
 
